[tool.poetry]
name = "autos"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
numpy = "^1.19.1"
pandas = "^1.1.0"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
